fin partie wolsey

--- a/rapport1.tex
+++ b/rapport1.tex
@@ -147,11 +147,13 @@ Il est donc inutile d'ouvrir une instance dès que l'on a réussi à stocker suf
 \begin{equation}
 s_{t-1}+x_{t} = d_{t}+s_{t} \geq d_{t}
 \end{equation}
- $\and$
+ \begin{center}\&\end{center}
 \begin{equation}
-y_{t}=0 \arrow x_{t}=0
+y_{t}=0 \Rightarrow x_{t}=0
 \end{equation}
-Ainsi ($3.1$) est toujours valide, et élague l'arborescence des solutions en forçant des variables $y_[t}$ relachées à se fixer à 0 .
+Ainsi ($3.1$) est toujours valide, et élague l'arborescence des solutions en forçant des variables $y_{t}$ relachées à se fixer à 0 .
+
+Les résultats ont confirmé l'amélioration du modèle puisque l'arbre obtenue par Branch and Bound est réduit a deux feuilles. 
 
 \section{Étude de la structure des solutions}
 
