Rapport final déposé

--- a/rapport1.tex
+++ b/rapport1.tex
@@ -155,7 +155,7 @@ Dans l'instance donnée, M devient donc un tableau de $5$ valeurs égales à $\{
 \end{figure}
 
 
-
+\newpage
 \section{Contraintes de coupes et inégalités valides}
 Dans cette section, nous avons intégré à notre modèle une contrainte de type inégalité valide présenté par Laurence Wolsey. (\ref{equ1})
 \begin{equation}
@@ -200,6 +200,7 @@ On peut alors voir la production à $t_i$ livrer directement $d_i$ et $d_{i+1}$,
  \caption{Représentation visuelle de la solution}
  \label{representation_graphique}
 \end{figure}
+\newpage
 \section{Cas Wagner-Whitin}
 Nous sommes dans un cas de coûts de Warner-Within lorsqu'il est systématiquement plus coûteux de produire et de stocker un produit pour une instance ultérieure, que de produire directement à l'instance $t$ (unitairement).
 Un exemple de cas est donné dans le tableau \ref{warner1}
